# mushroom-rl-ros

./: .gitignore  CMakeLists.txt  package.xml  setup.py
launch/: turtlebot_test.launch  turtlesim_test.launch
mushroom_rl_ros/: CMakeLists.txt  LICENSE  package.xml
mushroom_rl_ros/launch/: turtlebot_test.launch
mushroom_rl_ros/nodes/: turtlebot_learning  turtlesim_learning
mushroom_rl_ros/src/mushroom_rl_ros/: ros_environment.py
mushroom_rl_ros/src/mushroom_rl_ros/environments/: __init__.py  turtlebot_env.py  turtlesim_env.py
nodes/: turtlebot_learning  turtlebot_node  turtlesim_learning
scripts/: turtlebot_node.py
src/mushroom_rl_ros/: __init__.py
src/mushroom_rl_ros/environments/: turtlebot_env.py  turtlesim_env.py
src/mushroom_ros/: __init__.py  gazebo_environment.py  ros_environment.py
src/mushroom_ros/environments/: __init__.py  turtlebot_env.py
