<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mushroom_rl_ros</name>
  <version>1.0.0</version>
  <description>
    ROS environment interfaces for mushroom (Real robot/gazebo)
  </description>

  <maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>
  <license>MIT</license>

  <author>Davide Tateo</author>
  <author>Carlo D'Eramo</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
